@@ -1,3 +1,8 @@
+2016-11-30  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/78593
+	* gfortran.dg/derived_result.f90: New test case.
+
 2016-11-30  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	* lib/target-supports.exp (add_options_for_arm_arch_v6m): Add
