@@ -1,5 +1,10 @@
 2016-11-30  Janus Weil  <janus@gcc.gnu.org>
 
+	PR fortran/78593
+	* primary.c (gfc_match_varspec): Check if sym is non-null to avoid ICE.
+
+2016-11-30  Janus Weil  <janus@gcc.gnu.org>
+
 	PR fortran/78592
 	* interface.c (gfc_find_specific_dtio_proc): Rearrange code to avoid
 	dereferencing a null pointer.
